--- a/slavatracks/static/main.css
+++ b/slavatracks/static/main.css
@@ -27,6 +27,10 @@ a {
     letter-spacing: 0.4rem;
 }
 
+.open-add-track-modal-button-container {
+    text-align: center;
+}
+
 .styles-dropdown-summary {
     font-size: 1rem;
 }
